@@ -1,9 +1,12 @@
 /*******************************************************************************
  * Copyright (c) 2015 Eclipse RDF4J contributors, Aduna, and others.
+ *
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Distribution License v1.0
  * which accompanies this distribution, and is available at
  * http://www.eclipse.org/org/documents/edl-v10.php.
+ *
+ * SPDX-License-Identifier: BSD-3-Clause
  *******************************************************************************/
 package org.eclipse.rdf4j.query.resultio;
 
@@ -11,6 +14,7 @@ import java.nio.charset.Charset;
 import java.nio.charset.StandardCharsets;
 import java.util.Arrays;
 import java.util.Collection;
+import java.util.List;
 
 import org.eclipse.rdf4j.common.annotation.Experimental;
 import org.eclipse.rdf4j.model.IRI;
@@ -29,12 +33,12 @@ public class TupleQueryResultFormat extends QueryResultFormat {
 	 *-----------*/
 
 	/**
-	 * Indicates that RDF* triples can be serialized natively for this format.
+	 * Indicates that RDF-star triples can be serialized natively for this format.
 	 */
 	private static final boolean SUPPORTS_RDF_STAR = true;
 
 	/**
-	 * Indicates that RDF* triples will NOT be serialized natively for this format.
+	 * Indicates that RDF-star triples will NOT be serialized natively for this format.
 	 */
 	private static final boolean NO_RDF_STAR = false;
 
@@ -46,12 +50,12 @@ public class TupleQueryResultFormat extends QueryResultFormat {
 			Arrays.asList("srx", "xml"), SPARQL_RESULTS_XML_URI, NO_RDF_STAR);
 
 	/**
-	 * SPARQL* Query Results XML Format (like SPARQL/XML but with native RDF* support).
+	 * SPARQL-star Query Results XML Format (like SPARQL/XML but with native RDF-star support).
 	 */
 	@Experimental
-	public static final TupleQueryResultFormat SPARQL_STAR = new TupleQueryResultFormat("SPARQL*/XML",
-			Arrays.asList("application/x-sparqlstar-results+xml"), StandardCharsets.UTF_8,
-			Arrays.asList("srxs"), null, SUPPORTS_RDF_STAR);
+	public static final TupleQueryResultFormat SPARQL_STAR = new TupleQueryResultFormat("SPARQL-star/XML",
+			List.of("application/x-sparqlstar-results+xml"), StandardCharsets.UTF_8,
+			List.of("srxs"), null, SUPPORTS_RDF_STAR);
 
 	/**
 	 * Binary RDF results table format.
@@ -67,39 +71,39 @@ public class TupleQueryResultFormat extends QueryResultFormat {
 			Arrays.asList("srj", "json"), SPARQL_RESULTS_JSON_URI, NO_RDF_STAR);
 
 	/**
-	 * SPARQL* Query Results JSON Format (like SPARQL JSON but with RDF* support).
+	 * SPARQL-star Query Results JSON Format (like SPARQL JSON but with RDF-star support).
 	 */
 	@Experimental
-	public static final TupleQueryResultFormat JSON_STAR = new TupleQueryResultFormat("SPARQL*/JSON",
-			Arrays.asList("application/x-sparqlstar-results+json"), StandardCharsets.UTF_8,
-			Arrays.asList("srjs"), null, SUPPORTS_RDF_STAR);
+	public static final TupleQueryResultFormat JSON_STAR = new TupleQueryResultFormat("SPARQL-star/JSON",
+			List.of("application/x-sparqlstar-results+json"), StandardCharsets.UTF_8,
+			List.of("srjs"), null, SUPPORTS_RDF_STAR);
 
 	/**
 	 * SPARQL Query Result CSV Format.
 	 */
-	public static final TupleQueryResultFormat CSV = new TupleQueryResultFormat("SPARQL/CSV", Arrays.asList("text/csv"),
-			StandardCharsets.UTF_8, Arrays.asList("csv"), SPARQL_RESULTS_CSV_URI, NO_RDF_STAR);
+	public static final TupleQueryResultFormat CSV = new TupleQueryResultFormat("SPARQL/CSV", List.of("text/csv"),
+			StandardCharsets.UTF_8, List.of("csv"), SPARQL_RESULTS_CSV_URI, NO_RDF_STAR);
 
 	/**
 	 * SPARQL Query Result TSV Format.
 	 */
 	public static final TupleQueryResultFormat TSV = new TupleQueryResultFormat("SPARQL/TSV",
-			Arrays.asList("text/tab-separated-values"), StandardCharsets.UTF_8, Arrays.asList("tsv"),
+			List.of("text/tab-separated-values"), StandardCharsets.UTF_8, List.of("tsv"),
 			SPARQL_RESULTS_TSV_URI, NO_RDF_STAR);
 
 	/**
-	 * SPARQL* Query Results TSV Format (like SPARQL TSV but with RDF* support).
+	 * SPARQL-star Query Results TSV Format (like SPARQL TSV but with RDF-star support).
 	 */
-	public static final TupleQueryResultFormat TSV_STAR = new TupleQueryResultFormat("SPARQL*/TSV",
+	public static final TupleQueryResultFormat TSV_STAR = new TupleQueryResultFormat("SPARQL-star/TSV",
 			Arrays.asList("text/x-tab-separated-values-star", "application/x-sparqlstar-results+tsv"),
-			StandardCharsets.UTF_8, Arrays.asList("tsvs"), null, SUPPORTS_RDF_STAR);
+			StandardCharsets.UTF_8, List.of("tsvs"), null, SUPPORTS_RDF_STAR);
 
 	/*-----------*
 	 * Variables *
 	 *-----------*/
 
 	/**
-	 * Flag indicating whether the TupleQueryResultFormat can encode RDF* triples natively.
+	 * Flag indicating whether the TupleQueryResultFormat can encode RDF-star triples natively.
 	 */
 	private final boolean supportsRDFStar;
 
@@ -111,9 +115,9 @@ public class TupleQueryResultFormat extends QueryResultFormat {
 	 * Creates a new TupleQueryResultFormat object.
 	 *
 	 * @param name     The name of the format, e.g. "SPARQL/XML".
-	 * @param mimeType The MIME type of the format, e.g. <tt>application/sparql-results+xml</tt> for the SPARQL/XML
+	 * @param mimeType The MIME type of the format, e.g. <var>application/sparql-results+xml</var> for the SPARQL/XML
 	 *                 format.
-	 * @param fileExt  The (default) file extension for the format, e.g. <tt>srx</tt> for SPARQL/XML.
+	 * @param fileExt  The (default) file extension for the format, e.g. <var>srx</var> for SPARQL/XML.
 	 */
 	public TupleQueryResultFormat(String name, String mimeType, String fileExt) {
 		this(name, mimeType, null, fileExt, NO_RDF_STAR);
@@ -123,11 +127,11 @@ public class TupleQueryResultFormat extends QueryResultFormat {
 	 * Creates a new TupleQueryResultFormat object.
 	 *
 	 * @param name            The name of the format, e.g. "SPARQL/XML".
-	 * @param mimeType        The MIME type of the format, e.g. <tt>application/sparql-results+xml</tt> for the
+	 * @param mimeType        The MIME type of the format, e.g. <var>application/sparql-results+xml</var> for the
 	 *                        SPARQL/XML format.
-	 * @param fileExt         The (default) file extension for the format, e.g. <tt>srx</tt> for SPARQL/XML.
-	 * @param supportsRDFStar <tt>True</tt> if the TupleQueryResultFormat supports the encoding of RDF* triples natively
-	 *                        and <tt>false</tt> otherwise.
+	 * @param fileExt         The (default) file extension for the format, e.g. <var>srx</var> for SPARQL/XML.
+	 * @param supportsRDFStar <var>True</var> if the TupleQueryResultFormat supports the encoding of RDF-star triples
+	 *                        natively and <var>false</var> otherwise.
 	 * @since 3.2.0
 	 */
 	public TupleQueryResultFormat(String name, String mimeType, String fileExt, boolean supportsRDFStar) {
@@ -138,10 +142,10 @@ public class TupleQueryResultFormat extends QueryResultFormat {
 	 * Creates a new TupleQueryResultFormat object.
 	 *
 	 * @param name     The name of the format, e.g. "SPARQL/XML".
-	 * @param mimeType The MIME type of the format, e.g. <tt>application/sparql-results+xml</tt> for the SPARQL/XML
+	 * @param mimeType The MIME type of the format, e.g. <var>application/sparql-results+xml</var> for the SPARQL/XML
 	 *                 format.
-	 * @param charset  The default character encoding of the format. Specify <tt>null</tt> if not applicable.
-	 * @param fileExt  The (default) file extension for the format, e.g. <tt>srx</tt> for SPARQL/XML.
+	 * @param charset  The default character encoding of the format. Specify <var>null</var> if not applicable.
+	 * @param fileExt  The (default) file extension for the format, e.g. <var>srx</var> for SPARQL/XML.
 	 */
 	public TupleQueryResultFormat(String name, String mimeType, Charset charset, String fileExt) {
 		this(name, mimeType, charset, fileExt, NO_RDF_STAR);
@@ -151,12 +155,12 @@ public class TupleQueryResultFormat extends QueryResultFormat {
 	 * Creates a new TupleQueryResultFormat object.
 	 *
 	 * @param name            The name of the format, e.g. "SPARQL/XML".
-	 * @param mimeType        The MIME type of the format, e.g. <tt>application/sparql-results+xml</tt> for the
+	 * @param mimeType        The MIME type of the format, e.g. <var>application/sparql-results+xml</var> for the
 	 *                        SPARQL/XML format.
-	 * @param charset         The default character encoding of the format. Specify <tt>null</tt> if not applicable.
-	 * @param fileExt         The (default) file extension for the format, e.g. <tt>srx</tt> for SPARQL/XML.
-	 * @param supportsRDFStar <tt>True</tt> if the TupleQueryResultFormat supports the encoding of RDF* triples natively
-	 *                        and <tt>false</tt> otherwise.
+	 * @param charset         The default character encoding of the format. Specify <var>null</var> if not applicable.
+	 * @param fileExt         The (default) file extension for the format, e.g. <var>srx</var> for SPARQL/XML.
+	 * @param supportsRDFStar <var>True</var> if the TupleQueryResultFormat supports the encoding of RDF-star triples
+	 *                        natively and <var>false</var> otherwise.
 	 * @since 3.2.0
 	 */
 	public TupleQueryResultFormat(String name, String mimeType, Charset charset, String fileExt,
@@ -169,12 +173,12 @@ public class TupleQueryResultFormat extends QueryResultFormat {
 	 * Creates a new TupleQueryResultFormat object.
 	 *
 	 * @param name           The name of the format, e.g. "SPARQL/XML".
-	 * @param mimeTypes      The MIME types of the format, e.g. <tt>application/sparql-results+xml</tt> for the
+	 * @param mimeTypes      The MIME types of the format, e.g. <var>application/sparql-results+xml</var> for the
 	 *                       SPARQL/XML format. The first item in the list is interpreted as the default MIME type for
 	 *                       the format.
-	 * @param charset        The default character encoding of the format. Specify <tt>null</tt> if not applicable.
-	 * @param fileExtensions The format's file extensions, e.g. <tt>srx</tt> for SPARQL/XML files. The first item in the
-	 *                       list is interpreted as the default file extension for the format.
+	 * @param charset        The default character encoding of the format. Specify <var>null</var> if not applicable.
+	 * @param fileExtensions The format's file extensions, e.g. <var>srx</var> for SPARQL/XML files. The first item in
+	 *                       the list is interpreted as the default file extension for the format.
 	 */
 	public TupleQueryResultFormat(String name, Collection<String> mimeTypes, Charset charset,
 			Collection<String> fileExtensions) {
@@ -185,14 +189,14 @@ public class TupleQueryResultFormat extends QueryResultFormat {
 	 * Creates a new TupleQueryResultFormat object.
 	 *
 	 * @param name            The name of the format, e.g. "SPARQL/XML".
-	 * @param mimeTypes       The MIME types of the format, e.g. <tt>application/sparql-results+xml</tt> for the
+	 * @param mimeTypes       The MIME types of the format, e.g. <var>application/sparql-results+xml</var> for the
 	 *                        SPARQL/XML format. The first item in the list is interpreted as the default MIME type for
 	 *                        the format.
-	 * @param charset         The default character encoding of the format. Specify <tt>null</tt> if not applicable.
-	 * @param fileExtensions  The format's file extensions, e.g. <tt>srx</tt> for SPARQL/XML files. The first item in
+	 * @param charset         The default character encoding of the format. Specify <var>null</var> if not applicable.
+	 * @param fileExtensions  The format's file extensions, e.g. <var>srx</var> for SPARQL/XML files. The first item in
 	 *                        the list is interpreted as the default file extension for the format.
-	 * @param supportsRDFStar <tt>True</tt> if the TupleQueryResultFormat supports the encoding of RDF* triples natively
-	 *                        and <tt>false</tt> otherwise.
+	 * @param supportsRDFStar <var>True</var> if the TupleQueryResultFormat supports the encoding of RDF-star triples
+	 *                        natively and <var>false</var> otherwise.
 	 * @since 3.2.0
 	 */
 	public TupleQueryResultFormat(String name, Collection<String> mimeTypes, Charset charset,
@@ -205,12 +209,12 @@ public class TupleQueryResultFormat extends QueryResultFormat {
 	 * Creates a new TupleQueryResultFormat object.
 	 *
 	 * @param name           The name of the format, e.g. "SPARQL/XML".
-	 * @param mimeTypes      The MIME types of the format, e.g. <tt>application/sparql-results+xml</tt> for the
+	 * @param mimeTypes      The MIME types of the format, e.g. <var>application/sparql-results+xml</var> for the
 	 *                       SPARQL/XML format. The first item in the list is interpreted as the default MIME type for
 	 *                       the format.
-	 * @param charset        The default character encoding of the format. Specify <tt>null</tt> if not applicable.
-	 * @param fileExtensions The format's file extensions, e.g. <tt>srx</tt> for SPARQL/XML files. The first item in the
-	 *                       list is interpreted as the default file extension for the format.
+	 * @param charset        The default character encoding of the format. Specify <var>null</var> if not applicable.
+	 * @param fileExtensions The format's file extensions, e.g. <var>srx</var> for SPARQL/XML files. The first item in
+	 *                       the list is interpreted as the default file extension for the format.
 	 * @param standardURI    The standard URI that has been assigned to this format by a standards organisation or null
 	 *                       if it does not currently have a standard URI.
 	 * @since 3.2.0
@@ -224,16 +228,16 @@ public class TupleQueryResultFormat extends QueryResultFormat {
 	 * Creates a new TupleQueryResultFormat object.
 	 *
 	 * @param name            The name of the format, e.g. "SPARQL/XML".
-	 * @param mimeTypes       The MIME types of the format, e.g. <tt>application/sparql-results+xml</tt> for the
+	 * @param mimeTypes       The MIME types of the format, e.g. <var>application/sparql-results+xml</var> for the
 	 *                        SPARQL/XML format. The first item in the list is interpreted as the default MIME type for
 	 *                        the format.
-	 * @param charset         The default character encoding of the format. Specify <tt>null</tt> if not applicable.
-	 * @param fileExtensions  The format's file extensions, e.g. <tt>srx</tt> for SPARQL/XML files. The first item in
+	 * @param charset         The default character encoding of the format. Specify <var>null</var> if not applicable.
+	 * @param fileExtensions  The format's file extensions, e.g. <var>srx</var> for SPARQL/XML files. The first item in
 	 *                        the list is interpreted as the default file extension for the format.
 	 * @param standardURI     The standard URI that has been assigned to this format by a standards organisation or null
 	 *                        if it does not currently have a standard URI.
-	 * @param supportsRDFStar <tt>True</tt> if the TupleQueryResultFormat supports the encoding of RDF* triples natively
-	 *                        and <tt>false</tt> otherwise.
+	 * @param supportsRDFStar <var>True</var> if the TupleQueryResultFormat supports the encoding of RDF-star triples
+	 *                        natively and <var>false</var> otherwise.
 	 * @since 3.2.0
 	 */
 	public TupleQueryResultFormat(String name, Collection<String> mimeTypes, Charset charset,
@@ -247,7 +251,7 @@ public class TupleQueryResultFormat extends QueryResultFormat {
 	 *---------*/
 
 	/**
-	 * Return <tt>true</tt> if the TupleQueryResultFormat supports the encoding of RDF* triples natively.
+	 * Return <var>true</var> if the TupleQueryResultFormat supports the encoding of RDF-star triples natively.
 	 *
 	 * @since 3.2.0
 	 */
