@@ -1,9 +1,12 @@
 /*******************************************************************************
  * Copyright (c) 2015 Eclipse RDF4J contributors, Aduna, and others.
+ *
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Distribution License v1.0
  * which accompanies this distribution, and is available at
  * http://www.eclipse.org/org/documents/edl-v10.php.
+ *
+ * SPDX-License-Identifier: BSD-3-Clause
  *******************************************************************************/
 package org.eclipse.rdf4j.rio;
 
@@ -56,12 +59,12 @@ public class RDFFormat extends FileFormat {
 	public static final boolean NO_CONTEXTS = false;
 
 	/**
-	 * Indicates that RDF* triples can be serialized natively for this format.
+	 * Indicates that RDF-star triples can be serialized natively for this format.
 	 */
 	public static final boolean SUPPORTS_RDF_STAR = true;
 
 	/**
-	 * Indicates that RDF* triples will NOT be serialized natively for this format.
+	 * Indicates that RDF-star triples will NOT be serialized natively for this format.
 	 */
 	public static final boolean NO_RDF_STAR = false;
 
@@ -92,7 +95,7 @@ public class RDFFormat extends FileFormat {
 	 * @see <a href="http://www.w3.org/TR/n-triples/">N-Triples</a>
 	 */
 	public static final RDFFormat NTRIPLES = new RDFFormat("N-Triples",
-			Arrays.asList("application/n-triples", "text/plain"), StandardCharsets.UTF_8, Arrays.asList("nt"),
+			Arrays.asList("application/n-triples", "text/plain"), StandardCharsets.UTF_8, List.of("nt"),
 			SimpleValueFactory.getInstance().createIRI("http://www.w3.org/ns/formats/N-Triples"), NO_NAMESPACES,
 			NO_CONTEXTS, NO_RDF_STAR);
 
@@ -106,23 +109,24 @@ public class RDFFormat extends FileFormat {
 	 * @see <a href="http://www.w3.org/TR/turtle/">Turtle - Terse RDF Triple Language</a>
 	 */
 	public static final RDFFormat TURTLE = new RDFFormat("Turtle", Arrays.asList("text/turtle", "application/x-turtle"),
-			StandardCharsets.UTF_8, Arrays.asList("ttl"),
+			StandardCharsets.UTF_8, List.of("ttl"),
 			SimpleValueFactory.getInstance().createIRI("http://www.w3.org/ns/formats/Turtle"), SUPPORTS_NAMESPACES,
 			NO_CONTEXTS, NO_RDF_STAR);
 
 	/**
-	 * The Turtle* (TurtleStar) file format, a Turtle-based RDF serialization format that supports RDF* triples.
+	 * The Turtle-star file format, a Turtle-based RDF serialization format that supports RDF-star triples.
 	 * <p>
-	 * The file extension <code>.ttls</code> is recommended for Turtle* documents. The media type is
+	 * The file extension <code>.ttls</code> is recommended for Turtle-star documents. The media type is
 	 * <code>application/x-turtlestar</code> and the encoding is UTF-8.
 	 * </p>
 	 *
 	 * @see <a href="https://arxiv.org/pdf/1406.3399.pdf">Foundations of an Alternative Approach to Reification in
 	 *      RDF</a>
+	 * @see <a href="https://w3c.github.io/rdf-star/cg-spec/">RDF-star and SPARQL-star Draft Community Group Report</a>
 	 */
-	public static final RDFFormat TURTLESTAR = new RDFFormat("Turtle*",
+	public static final RDFFormat TURTLESTAR = new RDFFormat("Turtle-star",
 			Arrays.asList("text/x-turtlestar", "application/x-turtlestar"), StandardCharsets.UTF_8,
-			Arrays.asList("ttls"), SUPPORTS_NAMESPACES, NO_CONTEXTS, SUPPORTS_RDF_STAR);
+			List.of("ttls"), SUPPORTS_NAMESPACES, NO_CONTEXTS, SUPPORTS_RDF_STAR);
 
 	/**
 	 * The <a href="http://www.w3.org/TeamSubmission/n3/">N3/Notation3</a> file format.
@@ -134,7 +138,7 @@ public class RDFFormat extends FileFormat {
 	 * @see <a href="http://www.w3.org/TeamSubmission/n3/">Notation3 (N3): A readable RDF syntax</a>
 	 */
 	public static final RDFFormat N3 = new RDFFormat("N3", Arrays.asList("text/n3", "text/rdf+n3"),
-			StandardCharsets.UTF_8, Arrays.asList("n3"),
+			StandardCharsets.UTF_8, List.of("n3"),
 			SimpleValueFactory.getInstance().createIRI("http://www.w3.org/ns/formats/N3"), SUPPORTS_NAMESPACES,
 			NO_CONTEXTS, NO_RDF_STAR);
 
@@ -148,7 +152,7 @@ public class RDFFormat extends FileFormat {
 	 *
 	 * @see <a href="http://swdev.nokia.com/trix/">TriX: RDF Triples in XML</a>
 	 */
-	public static final RDFFormat TRIX = new RDFFormat("TriX", Arrays.asList("application/trix"),
+	public static final RDFFormat TRIX = new RDFFormat("TriX", List.of("application/trix"),
 			StandardCharsets.UTF_8, Arrays.asList("xml", "trix"), null, SUPPORTS_NAMESPACES, SUPPORTS_CONTEXTS,
 			NO_RDF_STAR);
 
@@ -163,22 +167,23 @@ public class RDFFormat extends FileFormat {
 	 * @see <a href="http://www.w3.org/TR/trig/">The TriG Syntax</a>
 	 */
 	public static final RDFFormat TRIG = new RDFFormat("TriG", Arrays.asList("application/trig", "application/x-trig"),
-			StandardCharsets.UTF_8, Arrays.asList("trig"),
+			StandardCharsets.UTF_8, List.of("trig"),
 			SimpleValueFactory.getInstance().createIRI("http://www.w3.org/ns/formats/TriG"), SUPPORTS_NAMESPACES,
 			SUPPORTS_CONTEXTS, NO_RDF_STAR);
 
 	/**
-	 * The TriG* (TriGStar) file format, a TriG-based RDF serialization format that supports RDF* triples. This builds
-	 * upon the idea for the Turtle* format but adds support for named graphs.
+	 * The TriG-star file format, a TriG-based RDF serialization format that supports RDF-star triples. This builds upon
+	 * the idea for the Turtle-star format but adds support for named graphs.
 	 * <p>
-	 * The file extension <code>.trigs</code> is recommended for TriG* documents. The media type is
+	 * The file extension <code>.trigs</code> is recommended for TriG-star documents. The media type is
 	 * <code>application/x-trigstar</code> and the encoding is UTF-8.
 	 * </p>
 	 *
 	 * @see <a href="https://arxiv.org/pdf/1406.3399.pdf">Foundations of an Alternative Approach to Reification in
 	 *      RDF</a>
+	 * @see <a href="https://w3c.github.io/rdf-star/cg-spec/">RDF-star and SPARQL-star Draft Community Group Report</a>
 	 */
-	public static final RDFFormat TRIGSTAR = new RDFFormat("TriG*", "application/x-trigstar",
+	public static final RDFFormat TRIGSTAR = new RDFFormat("TriG-star", "application/x-trigstar",
 			StandardCharsets.UTF_8, "trigs", SUPPORTS_NAMESPACES, SUPPORTS_CONTEXTS, SUPPORTS_RDF_STAR);
 
 	/**
@@ -190,8 +195,8 @@ public class RDFFormat extends FileFormat {
 	 *
 	 * @see <a href="http://rivuli-development.com/2011/11/binary-rdf-in-sesame/">Binary RDF in Sesame</a>
 	 */
-	public static final RDFFormat BINARY = new RDFFormat("BinaryRDF", Arrays.asList("application/x-binary-rdf"), null,
-			Arrays.asList("brf"), null, SUPPORTS_NAMESPACES, SUPPORTS_CONTEXTS, SUPPORTS_RDF_STAR);
+	public static final RDFFormat BINARY = new RDFFormat("BinaryRDF", List.of("application/x-binary-rdf"), null,
+			List.of("brf"), null, SUPPORTS_NAMESPACES, SUPPORTS_CONTEXTS, SUPPORTS_RDF_STAR);
 
 	/**
 	 * The <a href="http://www.w3.org/TR/n-quads/">N-Quads</a> file format, an RDF serialization format that supports
@@ -205,7 +210,7 @@ public class RDFFormat extends FileFormat {
 	 */
 	public static final RDFFormat NQUADS = new RDFFormat("N-Quads",
 			Arrays.asList("application/n-quads", "text/x-nquads", "text/nquads"), StandardCharsets.UTF_8,
-			Arrays.asList("nq"), SimpleValueFactory.getInstance().createIRI("http://www.w3.org/ns/formats/N-Quads"),
+			List.of("nq"), SimpleValueFactory.getInstance().createIRI("http://www.w3.org/ns/formats/N-Quads"),
 			NO_NAMESPACES, SUPPORTS_CONTEXTS, NO_RDF_STAR);
 
 	/**
@@ -218,9 +223,20 @@ public class RDFFormat extends FileFormat {
 	 *
 	 * @see <a href="http://www.w3.org/TR/json-ld/">JSON-LD 1.0</a>
 	 */
-	public static final RDFFormat JSONLD = new RDFFormat("JSON-LD", Arrays.asList("application/ld+json"),
-			StandardCharsets.UTF_8, Arrays.asList("jsonld"),
+	public static final RDFFormat JSONLD = new RDFFormat("JSON-LD", List.of("application/ld+json"),
+			StandardCharsets.UTF_8, List.of("jsonld"),
 			SimpleValueFactory.getInstance().createIRI("http://www.w3.org/ns/formats/JSON-LD"), SUPPORTS_NAMESPACES,
+			SUPPORTS_CONTEXTS, NO_RDF_STAR);
+
+	/**
+	 * The NDJSON-LD is a Newline Delimited JSON-LD format.
+	 * <p>
+	 * The file extension <code>.ndjsonld</code> is recommended for NDJSON-LD documents. The media type is
+	 * <code>application/x-ld+ndjson</code> and the encoding is UTF-8.
+	 * </p>
+	 */
+	public static final RDFFormat NDJSONLD = new RDFFormat("NDJSON-LD", List.of("application/x-ld+ndjson"),
+			StandardCharsets.UTF_8, Arrays.asList("ndjsonld", "jsonl", "ndjson"), null, SUPPORTS_NAMESPACES,
 			SUPPORTS_CONTEXTS, NO_RDF_STAR);
 
 	/**
@@ -233,8 +249,8 @@ public class RDFFormat extends FileFormat {
 	 *
 	 * @see <a href="http://www.w3.org/TR/rdf-json/">RDF 1.1 JSON Alternate Serialization (RDF/JSON)</a>
 	 */
-	public static final RDFFormat RDFJSON = new RDFFormat("RDF/JSON", Arrays.asList("application/rdf+json"),
-			StandardCharsets.UTF_8, Arrays.asList("rj"),
+	public static final RDFFormat RDFJSON = new RDFFormat("RDF/JSON", List.of("application/rdf+json"),
+			StandardCharsets.UTF_8, List.of("rj"),
 			SimpleValueFactory.getInstance().createIRI("http://www.w3.org/ns/formats/RDF_JSON"), NO_NAMESPACES,
 			SUPPORTS_CONTEXTS, NO_RDF_STAR);
 
@@ -262,7 +278,7 @@ public class RDFFormat extends FileFormat {
 	 * @see <a href="http://www.rdfhdt.org/hdt-binary-format/">HDT v1.0</a>
 	 */
 	public static final RDFFormat HDT = new RDFFormat("HDT",
-			Arrays.asList("application/vnd.hdt"), null, Arrays.asList("hdt"), null,
+			List.of("application/vnd.hdt"), null, List.of("hdt"), null,
 			SUPPORTS_NAMESPACES, NO_CONTEXTS, NO_RDF_STAR);
 
 	/*----------------*
@@ -342,7 +358,7 @@ public class RDFFormat extends FileFormat {
 	private final boolean supportsContexts;
 
 	/**
-	 * Flag indicating whether the RDFFormat can encode RDF* triples natively.
+	 * Flag indicating whether the RDFFormat can encode RDF-star triples natively.
 	 */
 	private final boolean supportsRDFStar;
 
@@ -351,7 +367,7 @@ public class RDFFormat extends FileFormat {
 	 *
 	 * @see <a href="http://www.w3.org/ns/formats/">Unique URIs for File Formats</a>
 	 */
-	private IRI standardURI;
+	private final IRI standardURI;
 
 	/*--------------*
 	 * Constructors *
@@ -361,19 +377,19 @@ public class RDFFormat extends FileFormat {
 	 * Creates a new RDFFormat object.
 	 *
 	 * @param name               The name of the RDF file format, e.g. "RDF/XML".
-	 * @param mimeType           The MIME type of the RDF file format, e.g. <tt>application/rdf+xml</tt> for the RDF/XML
-	 *                           file format.
-	 * @param charset            The default character encoding of the RDF file format. Specify <tt>null</tt> if not
+	 * @param mimeType           The MIME type of the RDF file format, e.g. <var>application/rdf+xml</var> for the
+	 *                           RDF/XML file format.
+	 * @param charset            The default character encoding of the RDF file format. Specify <var>null</var> if not
 	 *                           applicable.
-	 * @param fileExtension      The (default) file extension for the RDF file format, e.g. <tt>rdf</tt> for RDF/XML
+	 * @param fileExtension      The (default) file extension for the RDF file format, e.g. <var>rdf</var> for RDF/XML
 	 *                           files.
-	 * @param supportsNamespaces <tt>True</tt> if the RDFFormat supports the encoding of namespace/prefix information
-	 *                           and <tt>false</tt> otherwise.
-	 * @param supportsContexts   <tt>True</tt> if the RDFFormat supports the encoding of contexts/named graphs and
-	 *                           <tt>false</tt> otherwise.
+	 * @param supportsNamespaces <var>True</var> if the RDFFormat supports the encoding of namespace/prefix information
+	 *                           and <var>false</var> otherwise.
+	 * @param supportsContexts   <var>True</var> if the RDFFormat supports the encoding of contexts/named graphs and
+	 *                           <var>false</var> otherwise.
 	 * @deprecated since 3.2.0
 	 */
-	@Deprecated
+	@Deprecated(since = "3.2.0")
 	public RDFFormat(String name, String mimeType, Charset charset, String fileExtension, boolean supportsNamespaces,
 			boolean supportsContexts) {
 		this(name, mimeType, charset, fileExtension, supportsNamespaces, supportsContexts, NO_RDF_STAR);
@@ -383,22 +399,22 @@ public class RDFFormat extends FileFormat {
 	 * Creates a new RDFFormat object.
 	 *
 	 * @param name               The name of the RDF file format, e.g. "RDF/XML".
-	 * @param mimeType           The MIME type of the RDF file format, e.g. <tt>application/rdf+xml</tt> for the RDF/XML
-	 *                           file format.
-	 * @param charset            The default character encoding of the RDF file format. Specify <tt>null</tt> if not
+	 * @param mimeType           The MIME type of the RDF file format, e.g. <var>application/rdf+xml</var> for the
+	 *                           RDF/XML file format.
+	 * @param charset            The default character encoding of the RDF file format. Specify <var>null</var> if not
 	 *                           applicable.
-	 * @param fileExtension      The (default) file extension for the RDF file format, e.g. <tt>rdf</tt> for RDF/XML
+	 * @param fileExtension      The (default) file extension for the RDF file format, e.g. <var>rdf</var> for RDF/XML
 	 *                           files.
-	 * @param supportsNamespaces <tt>True</tt> if the RDFFormat supports the encoding of namespace/prefix information
-	 *                           and <tt>false</tt> otherwise.
-	 * @param supportsContexts   <tt>True</tt> if the RDFFormat supports the encoding of contexts/named graphs and
-	 *                           <tt>false</tt> otherwise.
-	 * @param supportsRDFStar    <tt>True</tt> if the RDFFormat supports the encoding of RDF* triples natively and
-	 *                           <tt>false</tt> otherwise.
+	 * @param supportsNamespaces <var>True</var> if the RDFFormat supports the encoding of namespace/prefix information
+	 *                           and <var>false</var> otherwise.
+	 * @param supportsContexts   <var>True</var> if the RDFFormat supports the encoding of contexts/named graphs and
+	 *                           <var>false</var> otherwise.
+	 * @param supportsRDFStar    <var>True</var> if the RDFFormat supports the encoding of RDF-star triples natively and
+	 *                           <var>false</var> otherwise.
 	 */
 	public RDFFormat(String name, String mimeType, Charset charset, String fileExtension, boolean supportsNamespaces,
 			boolean supportsContexts, boolean supportsRDFStar) {
-		this(name, Arrays.asList(mimeType), charset, Arrays.asList(fileExtension), supportsNamespaces,
+		this(name, List.of(mimeType), charset, List.of(fileExtension), supportsNamespaces,
 				supportsContexts, supportsRDFStar);
 	}
 
@@ -406,19 +422,19 @@ public class RDFFormat extends FileFormat {
 	 * Creates a new RDFFormat object.
 	 *
 	 * @param name               The name of the RDF file format, e.g. "RDF/XML".
-	 * @param mimeType           The MIME type of the RDF file format, e.g. <tt>application/rdf+xml</tt> for the RDF/XML
-	 *                           file format.
-	 * @param charset            The default character encoding of the RDF file format. Specify <tt>null</tt> if not
+	 * @param mimeType           The MIME type of the RDF file format, e.g. <var>application/rdf+xml</var> for the
+	 *                           RDF/XML file format.
+	 * @param charset            The default character encoding of the RDF file format. Specify <var>null</var> if not
 	 *                           applicable.
-	 * @param fileExtensions     The RDF format's file extensions, e.g. <tt>rdf</tt> for RDF/XML files. The first item
+	 * @param fileExtensions     The RDF format's file extensions, e.g. <var>rdf</var> for RDF/XML files. The first item
 	 *                           in the list is interpreted as the default file extension for the format.
-	 * @param supportsNamespaces <tt>True</tt> if the RDFFormat supports the encoding of namespace/prefix information
-	 *                           and <tt>false</tt> otherwise.
-	 * @param supportsContexts   <tt>True</tt> if the RDFFormat supports the encoding of contexts/named graphs and
-	 *                           <tt>false</tt> otherwise.
+	 * @param supportsNamespaces <var>True</var> if the RDFFormat supports the encoding of namespace/prefix information
+	 *                           and <var>false</var> otherwise.
+	 * @param supportsContexts   <var>True</var> if the RDFFormat supports the encoding of contexts/named graphs and
+	 *                           <var>false</var> otherwise.
 	 * @deprecated since 3.2.0
 	 */
-	@Deprecated
+	@Deprecated(since = "3.2.0")
 	public RDFFormat(String name, String mimeType, Charset charset, Collection<String> fileExtensions,
 			boolean supportsNamespaces, boolean supportsContexts) {
 		this(name, mimeType, charset, fileExtensions, supportsNamespaces, supportsContexts, NO_RDF_STAR);
@@ -428,22 +444,22 @@ public class RDFFormat extends FileFormat {
 	 * Creates a new RDFFormat object.
 	 *
 	 * @param name               The name of the RDF file format, e.g. "RDF/XML".
-	 * @param mimeType           The MIME type of the RDF file format, e.g. <tt>application/rdf+xml</tt> for the RDF/XML
-	 *                           file format.
-	 * @param charset            The default character encoding of the RDF file format. Specify <tt>null</tt> if not
+	 * @param mimeType           The MIME type of the RDF file format, e.g. <var>application/rdf+xml</var> for the
+	 *                           RDF/XML file format.
+	 * @param charset            The default character encoding of the RDF file format. Specify <var>null</var> if not
 	 *                           applicable.
-	 * @param fileExtensions     The RDF format's file extensions, e.g. <tt>rdf</tt> for RDF/XML files. The first item
+	 * @param fileExtensions     The RDF format's file extensions, e.g. <var>rdf</var> for RDF/XML files. The first item
 	 *                           in the list is interpreted as the default file extension for the format.
-	 * @param supportsNamespaces <tt>True</tt> if the RDFFormat supports the encoding of namespace/prefix information
-	 *                           and <tt>false</tt> otherwise.
-	 * @param supportsContexts   <tt>True</tt> if the RDFFormat supports the encoding of contexts/named graphs and
-	 *                           <tt>false</tt> otherwise.
-	 * @param supportsRDFStar    <tt>True</tt> if the RDFFormat supports the encoding of RDF* triples natively and
-	 *                           <tt>false</tt> otherwise.
+	 * @param supportsNamespaces <var>True</var> if the RDFFormat supports the encoding of namespace/prefix information
+	 *                           and <var>false</var> otherwise.
+	 * @param supportsContexts   <var>True</var> if the RDFFormat supports the encoding of contexts/named graphs and
+	 *                           <var>false</var> otherwise.
+	 * @param supportsRDFStar    <var>True</var> if the RDFFormat supports the encoding of RDF-star triples natively and
+	 *                           <var>false</var> otherwise.
 	 */
 	public RDFFormat(String name, String mimeType, Charset charset, Collection<String> fileExtensions,
 			boolean supportsNamespaces, boolean supportsContexts, boolean supportsRDFStar) {
-		this(name, Arrays.asList(mimeType), charset, fileExtensions, supportsNamespaces, supportsContexts,
+		this(name, List.of(mimeType), charset, fileExtensions, supportsNamespaces, supportsContexts,
 				supportsRDFStar);
 	}
 
@@ -451,20 +467,20 @@ public class RDFFormat extends FileFormat {
 	 * Creates a new RDFFormat object.
 	 *
 	 * @param name               The name of the RDF file format, e.g. "RDF/XML".
-	 * @param mimeTypes          The MIME types of the RDF file format, e.g. <tt>application/rdf+xml</tt> for the
+	 * @param mimeTypes          The MIME types of the RDF file format, e.g. <var>application/rdf+xml</var> for the
 	 *                           RDF/XML file format. The first item in the list is interpreted as the default MIME type
 	 *                           for the format.
-	 * @param charset            The default character encoding of the RDF file format. Specify <tt>null</tt> if not
+	 * @param charset            The default character encoding of the RDF file format. Specify <var>null</var> if not
 	 *                           applicable.
-	 * @param fileExtensions     The RDF format's file extensions, e.g. <tt>rdf</tt> for RDF/XML files. The first item
+	 * @param fileExtensions     The RDF format's file extensions, e.g. <var>rdf</var> for RDF/XML files. The first item
 	 *                           in the list is interpreted as the default file extension for the format.
-	 * @param supportsNamespaces <tt>True</tt> if the RDFFormat supports the encoding of namespace/prefix information
-	 *                           and <tt>false</tt> otherwise.
-	 * @param supportsContexts   <tt>True</tt> if the RDFFormat supports the encoding of contexts/named graphs and
-	 *                           <tt>false</tt> otherwise.
+	 * @param supportsNamespaces <var>True</var> if the RDFFormat supports the encoding of namespace/prefix information
+	 *                           and <var>false</var> otherwise.
+	 * @param supportsContexts   <var>True</var> if the RDFFormat supports the encoding of contexts/named graphs and
+	 *                           <var>false</var> otherwise.
 	 * @deprecated since 3.2.0
 	 */
-	@Deprecated
+	@Deprecated(since = "3.2.0")
 	public RDFFormat(String name, Collection<String> mimeTypes, Charset charset, Collection<String> fileExtensions,
 			boolean supportsNamespaces, boolean supportsContexts) {
 		this(name, mimeTypes, charset, fileExtensions, null, supportsNamespaces, supportsContexts, NO_RDF_STAR);
@@ -474,19 +490,19 @@ public class RDFFormat extends FileFormat {
 	 * Creates a new RDFFormat object.
 	 *
 	 * @param name               The name of the RDF file format, e.g. "RDF/XML".
-	 * @param mimeTypes          The MIME types of the RDF file format, e.g. <tt>application/rdf+xml</tt> for the
+	 * @param mimeTypes          The MIME types of the RDF file format, e.g. <var>application/rdf+xml</var> for the
 	 *                           RDF/XML file format. The first item in the list is interpreted as the default MIME type
 	 *                           for the format.
-	 * @param charset            The default character encoding of the RDF file format. Specify <tt>null</tt> if not
+	 * @param charset            The default character encoding of the RDF file format. Specify <var>null</var> if not
 	 *                           applicable.
-	 * @param fileExtensions     The RDF format's file extensions, e.g. <tt>rdf</tt> for RDF/XML files. The first item
+	 * @param fileExtensions     The RDF format's file extensions, e.g. <var>rdf</var> for RDF/XML files. The first item
 	 *                           in the list is interpreted as the default file extension for the format.
-	 * @param supportsNamespaces <tt>True</tt> if the RDFFormat supports the encoding of namespace/prefix information
-	 *                           and <tt>false</tt> otherwise.
-	 * @param supportsContexts   <tt>True</tt> if the RDFFormat supports the encoding of contexts/named graphs and
-	 *                           <tt>false</tt> otherwise.
-	 * @param supportsRDFStar    <tt>True</tt> if the RDFFormat supports the encoding of RDF* triples natively and
-	 *                           <tt>false</tt> otherwise.
+	 * @param supportsNamespaces <var>True</var> if the RDFFormat supports the encoding of namespace/prefix information
+	 *                           and <var>false</var> otherwise.
+	 * @param supportsContexts   <var>True</var> if the RDFFormat supports the encoding of contexts/named graphs and
+	 *                           <var>false</var> otherwise.
+	 * @param supportsRDFStar    <var>True</var> if the RDFFormat supports the encoding of RDF-star triples natively and
+	 *                           <var>false</var> otherwise.
 	 */
 	public RDFFormat(String name, Collection<String> mimeTypes, Charset charset, Collection<String> fileExtensions,
 			boolean supportsNamespaces, boolean supportsContexts, boolean supportsRDFStar) {
@@ -498,22 +514,22 @@ public class RDFFormat extends FileFormat {
 	 * Creates a new RDFFormat object.
 	 *
 	 * @param name               The name of the RDF file format, e.g. "RDF/XML".
-	 * @param mimeTypes          The MIME types of the RDF file format, e.g. <tt>application/rdf+xml</tt> for the
+	 * @param mimeTypes          The MIME types of the RDF file format, e.g. <var>application/rdf+xml</var> for the
 	 *                           RDF/XML file format. The first item in the list is interpreted as the default MIME type
 	 *                           for the format.
-	 * @param charset            The default character encoding of the RDF file format. Specify <tt>null</tt> if not
+	 * @param charset            The default character encoding of the RDF file format. Specify <var>null</var> if not
 	 *                           applicable.
-	 * @param fileExtensions     The RDF format's file extensions, e.g. <tt>rdf</tt> for RDF/XML files. The first item
+	 * @param fileExtensions     The RDF format's file extensions, e.g. <var>rdf</var> for RDF/XML files. The first item
 	 *                           in the list is interpreted as the default file extension for the format.
 	 * @param standardURI        The standard URI that has been assigned to this format by a standards organisation or
 	 *                           null if it does not currently have a standard URI.
-	 * @param supportsNamespaces <tt>True</tt> if the RDFFormat supports the encoding of namespace/prefix information
-	 *                           and <tt>false</tt> otherwise.
-	 * @param supportsContexts   <tt>True</tt> if the RDFFormat supports the encoding of contexts/named graphs and
-	 *                           <tt>false</tt> otherwise.
+	 * @param supportsNamespaces <var>True</var> if the RDFFormat supports the encoding of namespace/prefix information
+	 *                           and <var>false</var> otherwise.
+	 * @param supportsContexts   <var>True</var> if the RDFFormat supports the encoding of contexts/named graphs and
+	 *                           <var>false</var> otherwise.
 	 * @deprecated since 3.2.0
 	 */
-	@Deprecated
+	@Deprecated(since = "3.2.0")
 	public RDFFormat(String name, Collection<String> mimeTypes, Charset charset, Collection<String> fileExtensions,
 			IRI standardURI, boolean supportsNamespaces, boolean supportsContexts) {
 		this(name, mimeTypes, charset, fileExtensions, standardURI, supportsNamespaces, supportsContexts, NO_RDF_STAR);
@@ -523,21 +539,21 @@ public class RDFFormat extends FileFormat {
 	 * Creates a new RDFFormat object.
 	 *
 	 * @param name               The name of the RDF file format, e.g. "RDF/XML".
-	 * @param mimeTypes          The MIME types of the RDF file format, e.g. <tt>application/rdf+xml</tt> for the
+	 * @param mimeTypes          The MIME types of the RDF file format, e.g. <var>application/rdf+xml</var> for the
 	 *                           RDF/XML file format. The first item in the list is interpreted as the default MIME type
 	 *                           for the format.
-	 * @param charset            The default character encoding of the RDF file format. Specify <tt>null</tt> if not
+	 * @param charset            The default character encoding of the RDF file format. Specify <var>null</var> if not
 	 *                           applicable.
-	 * @param fileExtensions     The RDF format's file extensions, e.g. <tt>rdf</tt> for RDF/XML files. The first item
+	 * @param fileExtensions     The RDF format's file extensions, e.g. <var>rdf</var> for RDF/XML files. The first item
 	 *                           in the list is interpreted as the default file extension for the format.
 	 * @param standardURI        The standard URI that has been assigned to this format by a standards organisation or
 	 *                           null if it does not currently have a standard URI.
-	 * @param supportsNamespaces <tt>True</tt> if the RDFFormat supports the encoding of namespace/prefix information
-	 *                           and <tt>false</tt> otherwise.
-	 * @param supportsContexts   <tt>True</tt> if the RDFFormat supports the encoding of contexts/named graphs and
-	 *                           <tt>false</tt> otherwise.
-	 * @param supportsRDFStar    <tt>True</tt> if the RDFFormat supports the encoding of RDF* triples natively and
-	 *                           <tt>false</tt> otherwise.
+	 * @param supportsNamespaces <var>True</var> if the RDFFormat supports the encoding of namespace/prefix information
+	 *                           and <var>false</var> otherwise.
+	 * @param supportsContexts   <var>True</var> if the RDFFormat supports the encoding of contexts/named graphs and
+	 *                           <var>false</var> otherwise.
+	 * @param supportsRDFStar    <var>True</var> if the RDFFormat supports the encoding of RDF-star triples natively and
+	 *                           <var>false</var> otherwise.
 	 */
 	public RDFFormat(String name, Collection<String> mimeTypes, Charset charset, Collection<String> fileExtensions,
 			IRI standardURI, boolean supportsNamespaces, boolean supportsContexts, boolean supportsRDFStar) {
@@ -554,21 +570,21 @@ public class RDFFormat extends FileFormat {
 	 *---------*/
 
 	/**
-	 * Return <tt>true</tt> if the RDFFormat supports the encoding of namespace/prefix information.
+	 * Return <var>true</var> if the RDFFormat supports the encoding of namespace/prefix information.
 	 */
 	public boolean supportsNamespaces() {
 		return supportsNamespaces;
 	}
 
 	/**
-	 * Return <tt>true</tt> if the RDFFormat supports the encoding of contexts/named graphs.
+	 * Return <var>true</var> if the RDFFormat supports the encoding of contexts/named graphs.
 	 */
 	public boolean supportsContexts() {
 		return supportsContexts;
 	}
 
 	/**
-	 * Return <tt>true</tt> if the RDFFormat supports the encoding of RDF* triples natively.
+	 * Return <var>true</var> if the RDFFormat supports the encoding of RDF-star triples natively.
 	 */
 	public boolean supportsRDFStar() {
 		return supportsRDFStar;
