@@ -1,19 +1,22 @@
 /*******************************************************************************
  * Copyright (c) 2015 Eclipse RDF4J contributors, Aduna, and others.
+ *
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Distribution License v1.0
  * which accompanies this distribution, and is available at
  * http://www.eclipse.org/org/documents/edl-v10.php.
+ *
+ * SPDX-License-Identifier: BSD-3-Clause
  *******************************************************************************/
 package org.eclipse.rdf4j.workbench.proxy;
 
 import java.io.File;
 import java.io.IOException;
 import java.io.PrintWriter;
-import java.io.UnsupportedEncodingException;
 import java.net.MalformedURLException;
 import java.net.URL;
 import java.net.URLDecoder;
+import java.nio.charset.StandardCharsets;
 import java.util.Base64;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.ConcurrentMap;
@@ -24,7 +27,7 @@ import javax.servlet.ServletException;
 import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpServletResponse;
 
-import org.eclipse.rdf4j.exceptions.ValidationException;
+import org.eclipse.rdf4j.common.exception.ValidationException;
 import org.eclipse.rdf4j.http.protocol.UnauthorizedException;
 import org.eclipse.rdf4j.model.Model;
 import org.eclipse.rdf4j.query.QueryResultHandlerException;
@@ -178,7 +181,7 @@ public class WorkbenchServlet extends AbstractServlet {
 		builder.transform(this.getTransformationUrl(req), "server.xsl");
 		builder.start("error-message");
 		builder.result(
-				"The entered credentials entered either failed to authenticate to the Sesame server, or were unauthorized for the requested operation.");
+				"The entered credentials entered either failed to authenticate to the RDF4J server, or were unauthorized for the requested operation.");
 		builder.end();
 	}
 
@@ -189,12 +192,12 @@ public class WorkbenchServlet extends AbstractServlet {
 		} else {
 			manager = new RemoteRepositoryManager(param);
 		}
-		manager.initialize();
+		manager.init();
 		return manager;
 	}
 
-	private File asLocalFile(final URL rdf) throws UnsupportedEncodingException {
-		return new File(URLDecoder.decode(rdf.getFile(), "UTF-8"));
+	private File asLocalFile(final URL rdf) {
+		return new File(URLDecoder.decode(rdf.getFile(), StandardCharsets.UTF_8));
 	}
 
 	private void service(final String repoID, final HttpServletRequest req, final HttpServletResponse resp)
@@ -206,7 +209,7 @@ public class WorkbenchServlet extends AbstractServlet {
 		final int idx = path.indexOf(repoID) + repoID.length();
 		http.setServletPath(http.getServletPath() + path.substring(0, idx));
 		final String pathInfo = path.substring(idx);
-		http.setPathInfo(pathInfo.length() == 0 ? null : pathInfo);
+		http.setPathInfo(pathInfo.isEmpty() ? null : pathInfo);
 		if (repositories.containsKey(repoID)) {
 			repositories.get(repoID).service(http, resp);
 		} else {
@@ -263,9 +266,9 @@ public class WorkbenchServlet extends AbstractServlet {
 				LOGGER.info("Setting user '{}' and their password.", user);
 				rrm.setUsernameAndPassword(user, password);
 			}
-			// initialize() required to push credentials to internal HTTP
+			// init() required to push credentials to internal HTTP
 			// client.
-			rrm.initialize();
+			rrm.init();
 		}
 	}
 }
